--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "ecommerce-application-backend",
   "main": "server.js",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon server.js",
-    "start": "NODE_ENV=production npx sequelize db:migrate && NODE_ENV=production node server.js",
-    "start:development": "NODE_ENV=development npx sequelize db:migrate && NODE_ENV=development node server.js",
-    "start:staging": "NODE_ENV=staging npx sequelize db:migrate && NODE_ENV=staging node server.js",
-    "start:production": "NODE_ENV=production npx sequelize db:migrate && NODE_ENV=production node server.js",
-    "test": "NODE_ENV=test node server.js"
+    "dev": "cross-env NODE_ENV=development nodemon server.js",
+    "start": "cross-env NODE_ENV=production npx sequelize db:migrate && cross-env NODE_ENV=production node server.js",
+    "start:development": "cross-env NODE_ENV=development npx sequelize db:migrate && cross-env NODE_ENV=development node server.js",
+    "start:staging": "cross-env NODE_ENV=staging npx sequelize db:migrate && cross-env NODE_ENV=staging node server.js",
+    "start:production": "cross-env NODE_ENV=production npx sequelize db:migrate && cross-env NODE_ENV=production node server.js",
+    "test": "cross-env NODE_ENV=test node server.js"
   },
   "repository": "git+https://github.com/BrotocodeTech/mk-store-backend.git",
   "license": "ISC",
@@ -49,6 +49,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-import": "^2.31.0",
