--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "author": "abdulhadi",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.700.0",
     "@aws-sdk/client-sns": "^3.700.0",
+    "@aws-sdk/s3-request-presigner": "^3.962.0",
     "@azure/storage-blob": "^12.27.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
