--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "migrate": "npx sequelize db:migrate",
-    "dev": "cross-env NODE_ENV=development nodemon server.js",
+    "dev": "cross-env NODE_ENV=development node server.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
