--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "route-cache": "^0.7.0",
     "sequelize": "^6.37.6",
     "sequelize-cli": "^6.6.2",
+    "socket.io": "^4.8.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
