--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "migrate": "npx sequelize db:migrate",
     "dev": "cross-env NODE_ENV=development node server.js",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "generate:openapi": "node scripts/generateOpenAPI.js"
   },
   "repository": "git+https://github.com/BrotocodeTech/mk-store-backend.git",
   "license": "ISC",
@@ -24,6 +25,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "firebase-admin": "^12.0.0",
     "helmet": "^8.1.0",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
